--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "lightCode.chatId": "db0afbf9-6fcf-4eae-9fdd-63c7ff4b5aa1",
-  "lightCode.chatStatus": true,
+  "lightCode.chatId": "fbc1534b-c2ca-476a-a352-e195f57ef8a1",
+  "lightCode.chatStatus": false,
   "lightCode.processStatus": false
 }
